Replace StringTemplate with String concatenation as StringTemplates will be removed in JDK 23